--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@
   --color-brand-300: #9cb9ff;
   --color-brand-400: #7592ff;
   --color-brand-500: #009E38;
-  --color-brand-600: #3641f5;
+  --color-brand-600: #009434;
   --color-brand-700: #2a31d8;
   --color-brand-800: #252dae;
   --color-brand-900: #262e89;
