feat: Add report navigation item and corresponding translations in multiple languages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,7 @@
   --color-transparent: transparent;
   --color-white: #ffffff;
   --color-black: #101828;
+  --color-blackO: rgb(16 24 40 / 0.7);
 
   --color-brand-25: #f2f7ff;
   --color-brand-50: #ECFFF3;
