feat: Implement Role Permissions and User Roles management pages with corresponding UI and functionality refactor: Update navigation items to include Role Permissions and adjust translations for multiple languages fix: Change "Ecommerce" to "Analytics" in various language files for consistency

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@
   --color-brand-100: #dde9ff;
   --color-brand-200: #c2d6ff;
   --color-brand-300: #9cb9ff;
-  --color-brand-400: #7592ff;
+  --color-brand-400: #88F5A1;
   --color-brand-500: #009E38;
   --color-brand-600: #009434;
   --color-brand-700: #2a31d8;
