feat: Add Vouchers management page with CRUD functionality and filters

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,7 +47,7 @@
   --color-brand-400: #88F5A1;
   --color-brand-500: #009E38;
   --color-brand-600: #009434;
-  --color-brand-700: #2a31d8;
+  --color-brand-700: #10A134;
   --color-brand-800: #252dae;
   --color-brand-900: #262e89;
   --color-brand-950: #161950;
